fix: mobile menu alignment

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -20,10 +20,9 @@
    display: inline-block;
    background: url("../assets/img/site-logo.svg") no-repeat;
    position: relative;
-   top: -1px;
    background-position: center;
-   background-size: 165px 58px;
-   height: 58px;
+   background-size: 165px 56px;
+   height: 56px;
    width: 165px;
 }
 
@@ -40,9 +39,9 @@
 
    li a {
       transition: 0.3s;
-      line-height: 55px;
-      padding: 2px 1rem 0;
+      padding: 1rem;
       border-bottom: 2px solid transparent;
+      border-top: 2px solid transparent;
       &:hover {
          border-bottom: 2px solid App.$primary-color;
       }
@@ -137,10 +136,11 @@
    display: flex;
    align-items: center;
    gap: 10px;
-   padding: 2px 0.5rem 0;
+   padding: 0 0.5rem;
    transition: 0.3s;
-   height: 59px;
    border-bottom: 2px solid transparent;
+   border-top: 2px solid transparent;
+   height: 60px;
    &:hover {
       border-bottom: 2px solid App.$primary-color;
    }
@@ -196,7 +196,7 @@
    flex-direction: column;
    justify-items: center;
    position: absolute;
-   top: 58px;
+   top: 56px;
    left: 0;
    width: 100%;
 
@@ -217,6 +217,7 @@
       li a {
          display: block;
          padding: 0 1.2rem;
+         line-height: 50px;
          border: 0;
          &:hover {
             background-color: #e6dfbc;
